# asu-honors

./: .gitignore  README.md  start.sh
stock-sim/: .coverage  .env.example  .gitignore  FUTURE_LAB_AUDIT.md  PRODUCT.md  SETUP.md  SPEED.md  _run_api.py  _setup_db.py  alembic.ini  dev.sh  done.md  future lab.md  project.md  pyproject.toml  review.md  sim_engine_combined.py  stocksim.db
stock-sim/apps/api/: __init__.py  auth.py  celery_app.py  config.py  database.py  dependencies.py  exceptions.py  main.py  rate_limiter.py  schemas.py  tasks.py  ws_manager.py
stock-sim/apps/web/: .gitignore  DESIGN_SPEC.md  PHASE_1_AUTHENTICATION.md  SKILL.md  (+12 more)
stock-sim/data/: announcement_surprises.parquet  country_metadata.parquet  google_trends.parquet
stock-sim/db/: PHASE3.md  timeline_resolver.py
stock-sim/docs/: calibration-strategy.md  overview.md  phase3-audit.md  phase3-final-review.md  phase4-done.md  phase5-audit.md  phase5-plan.md  phase6-plan.md  price-value-engine.md  valuation_dry_run.py
stock-sim/engine/: __init__.py  concalls.py  cycle.py  drivers.py  events.py  fundamentals.py  liquidity.py  market.py  news_manager.py  ohlc.py  orchestrator.py  overrides.py  scoring.py  tick.py  valuation.py
stock-sim/scripts/: backfill_concalls.py  fix_db_config.py  gen-api-types.sh  recompute_valuations.py  recompute_volatility.py  verify_db_config.py
stock-sim/tests/: test_drivers.py  test_events.py  test_fundamentals.py  test_liquidity.py  test_market.py  test_news_manager.py  test_orchestrator.py  test_overrides.py  test_scoring.py  test_tick.py  test_valuation.py
(+499 files in other folders)
