[project]
name = "stock-sim"
version = "0.1.0"
description = "Fictional stock market simulation engine"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
